--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   image: ^2.0.4
   meta: ^1.1.6
-  path_provider:
+  path_provider: ^0.4.1
 
 dev_dependencies:
   flutter_test:
