--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image: ^2.0.4
+  image: ^2.1.3
   meta: ^1.1.6
-  path_provider: ^0.4.1
+  path_provider: ^0.5.0+1
 
 dev_dependencies:
   flutter_test:
