--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   image: ^2.1.3
   meta: ^1.1.6
-  path_provider: ^0.5.0+1
+  path_provider: ^1.1.0
 
 dev_dependencies:
   flutter_test:
