--- a/example/.gitignore
+++ b/example/.gitignore
@@ -23,6 +23,8 @@
 **/doc/api/
 .dart_tool/
 .flutter-plugins
+.flutter-plugins-dependencies
+flutter_export_environment.sh
 .packages
 .pub-cache/
 .pub/
