--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   image: ^2.1.14
   meta: ^1.2.2
   path_provider: ^1.6.11
-  worker_manager: ^3.0.0
+  worker_manager:
+    git:
+      url: git://github.com/prtm/worker_manager
+      ref: master
   
 dev_dependencies:
   flutter_test:
