--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 2.0.2
 homepage: https://github.com/skkallayath/photofilters
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -16,8 +16,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test:
-  image_picker: ^0.7.3
+  test: ^1.16.5
+  image_picker: ^0.7.4
   path: ^1.8.0
 
 # For information on the generic Dart part of this file, see the
