--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: photofilters
 description: A flutter package for applying various types of filters to an image. You can create your own filters and subfilters too.
-version: 3.0.0
+version: 3.0.1
 homepage: https://github.com/skkallayath/photofilters
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
