--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image: ^3.0.2
+  image: ^4.0.12
   meta: ^1.3.0
   path_provider: ^2.0.1
 
@@ -17,8 +17,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   test: ^1.16.5
-  image_picker: ^0.7.4
-  path: ^1.8.0
+  image_picker: ^0.8.6+1
+  path: ^1.8.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
