flutter_lints rules followed

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   path_provider: ^2.0.15
   photofilters:
     path: ../
+  path: ^1.8.3
+  image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
