--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,21 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image: ^3.0.2
-  meta: ^1.3.0
-  path_provider: ^2.0.1
+  image: ^4.0.17
+  meta: ^1.9.1
+  path_provider: ^2.0.15
+  image_picker: ^0.8.7+5
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: ^1.16.5
-  image_picker: ^0.7.4
-  path: ^1.8.0
+  test: ^1.24.1
 
-# For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
   # To add assets to your package, add an assets section, like this:
